--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,15 @@ body {
   margin: 0;
 }
 
+a {
+  color: #1abc9c;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #f6a623;
+}
+
 #header {
   background-color: #1abc9c;
   height: 150px;
@@ -38,6 +47,27 @@ body {
 #header-nav li {
   display: inline;
   padding-left: 20px;
+}
+
+#footer {
+  background-color: #2f2f2f;
+  padding: 50px 0;
+}
+
+#footer h4 {
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+#footer p {
+  color: white;
+}
+
+.column {
+  min-width: 300px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .container {
