--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 body {
   color: #555;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -10,6 +13,14 @@ a {
 
 a:hover {
   color: #f6a623;
+}
+
+h1, h2, h3, h4 {
+  color: #333;
+}
+
+p {
+  line-height: 1.5;
 }
 
 #header {
@@ -73,4 +84,27 @@ a:hover {
 .container {
   max-width: 1000px;
   margin: 0 auto;
+}
+
+.post {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+
+.post-author img {
+  width:50px;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.post-author span {
+  margin-left: 16px;
+}
+
+.post-date {
+  color: #d2d2d2;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;letter-spacing: 0.1em;
 }
