--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,10 @@ p {
   color: white;
 }
 
+.about {
+  text-align: center;
+}
+
 .column {
   min-width: 300px;
   display: inline-block;
@@ -86,15 +90,24 @@ p {
   margin: 0 auto;
 }
 
-.post {
+.container:nth-child(even) {
+  background: #D3D3D3;
+}
+
+.post, .about {
   max-width: 800px;
   margin: 0 auto;
   padding: 60px 0;
 }
 
-.post-author img {
+.about-author img {
+  border-radius: 50%;
+}
+
+.post-author img {  
   width:50px;
   height: 50px;
+  border-radius: 50%;
   vertical-align: middle;
 }
 
